--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
             <div class="row">
                 <!-- left section -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInLeft">
-                    <center><img src="img/logo.png" class="logo" /></center>
+                    <center><img src="assets/logo2.png" class="logo" /></center>
                     <center>
-                        <h1> The Best App </h1>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </center>
                 </div>
                 <!-- right section -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInRight">
-                    <center><img src="img/iphonex.png" class="imgright"></center>
+                    <center><img src="assets/iphonex.png" class="imgright"></center>
                 </div>
             </div>
         </div>
@@ -58,17 +57,20 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                         </ol>
                         <div class="carousel-inner">
+                          <div class="carousel-item active">
+                              <img class="d-block " src="assets/1.jpg" alt="First slide">
+                          </div>
                             <div class="carousel-item active">
-                                <img class="d-block " src="img/2.jpg" alt="First slide">
+                                <img class="d-block " src="assets/2.jpg" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block " src="img/5.jpg" alt="Second slide">
+                                <img class="d-block " src="assets/5.jpg" alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block " src="img/4.jpg" alt="Third slide">
+                                <img class="d-block " src="assets/4.jpg" alt="Fourth slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block " src="img/3.jpg" alt="Fourth slide">
+                                <img class="d-block " src="assets/3.jpg" alt="Fifth slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -140,8 +142,8 @@
     		</div>
     		<div class="row">
     			<div class="col align-self-center mb-5 wow fadeInUp">
-    				<a href="itunes.com" class="mr-5 downloadbtn"><img src="img/apple.png"></a>
-    				<a href="play.google.com" class="downloadbtn"><img src="img/android.png"></a>
+    				<a href="itunes.com" class="mr-5 downloadbtn"><img src="assets/apple.png"></a>
+    				<a href="play.google.com" class="downloadbtn"><img src="assets/android.png"></a>
     			</div>
     		</div>
 
@@ -160,7 +162,7 @@
     				<center>
     				<a href="mailto:webmaster@example.com">
     					<button>
-    						<h4><b>Shoot us an Email</b></h4>
+    						<h4><b>Email Us</b></h4>
     					</button>
     				</a></center>
     			</div>
@@ -175,7 +177,7 @@
     			<div class="col-md-4 col-sm-4 col-lg-4"></div>
     			<div class="col-md-4 col-sm-4 col-lg-4">
     				<center>
-    					<img src="img/logo-footer.png" class="logofooter" />
+    					<img src="assets/logo2.png" class="logofooter" />
     				</center>
     			</div>
     			<div class="col-md-4 col-sm-4 col-lg-4"></div>
