--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <!-- left section -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInLeft">
-                    <center><img src="assets/logo2.png" class="logo" /></center>
+                    <center><img src="assets/logo.png" class="logo" /></center>
                     <center>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </center>
@@ -60,17 +60,17 @@
                           <div class="carousel-item active">
                               <img class="d-block " src="assets/1.jpg" alt="First slide">
                           </div>
-                            <div class="carousel-item active">
+                            <div class="carousel-item">
                                 <img class="d-block " src="assets/2.jpg" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block " src="assets/5.jpg" alt="Third slide">
+                                <img class="d-block " src="assets/3.jpg" alt="Third slide">
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block " src="assets/4.jpg" alt="Fourth slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block " src="assets/3.jpg" alt="Fifth slide">
+                                <img class="d-block " src="assets/5.jpg" alt="Fifth slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -177,7 +177,7 @@
     			<div class="col-md-4 col-sm-4 col-lg-4"></div>
     			<div class="col-md-4 col-sm-4 col-lg-4">
     				<center>
-    					<img src="assets/logo2.png" class="logofooter" />
+    					<img src="assets/logo.png" class="logofooter" />
     				</center>
     			</div>
     			<div class="col-md-4 col-sm-4 col-lg-4"></div>
